lib/bait/tests/inout_error/attr_export.out
lib/bait/tests/inout/attr_export.in.bt:6:7 error: @export name "spameggs" is already used
