lib/bait/tests/inout_error/attr_export.in.bt
package mypkg

@export: 'spameggs'
fun spam() {}

@export: 'spameggs'
fun eggs() {}
